contrasting guide colors from selection color, issue #39

--- a/styles/editor.less
+++ b/styles/editor.less
@@ -15,7 +15,7 @@ atom-text-editor::shadow,
 
   .indent-guide {
     color: @indent-guide-color;
-    box-shadow: inset 1px 0;
+    box-shadow: inset 1px 0 @indent-guide-color;
   }
 
   .bracket-matcher .region {
